--- a/README.Rmd
+++ b/README.Rmd
@@ -1,10 +1,21 @@
+---
+output: github_document
+---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
+
+```{r, include = FALSE}
+knitr::opts_chunk$set(
+  collapse = TRUE,
+  comment = "#>",
+  fig.path = "man/figures/README-",
+  out.width = "100%"
+)
+```
 
 # audit.connect
 
 <!-- badges: start -->
-
 [![R-CMD-check](https://github.com/jumpingrivers/audit.workbench/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/jumpingrivers/audit.workbench/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
@@ -14,7 +25,7 @@ This checks that Posit Workbench has been correctly installed.
 
 To install the R package, run
 
-``` r
+```{r, eval = FALSE}
 remotes::install_github("github/audit.workbench")
 ```
 
@@ -22,7 +33,8 @@ remotes::install_github("github/audit.workbench")
 
 Running the test is straightforward
 
-``` r
+```{r, eval = FALSE}
 library("audit.workbench")
 check(server = "https://www.server.name/")
 ```
+
