--- a/README.Rmd
+++ b/README.Rmd
@@ -26,7 +26,9 @@ This checks that Posit Workbench has been correctly installed.
 To install the R package, run
 
 ```{r, eval = FALSE}
-remotes::install_github("github/audit.workbench")
+install.packages('audit.workbench', 
+                 repos = c('https://jumpingrivers.r-universe.dev', 
+                           'https://cloud.r-project.org'))
 ```
 
 ## Usage
